--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -36,7 +36,7 @@
       <div class="flex items-center gap-3">
         <h2 class="w-82pxr h-42pxr">
           <a href="/">
-            <img src="/jandi_logo.svg" alt="잔디마켓" />
+            <img src="public/menu/jandi_logo.svg" alt="잔디마켓" />
           </a>
         </h2>
         <a class="font-semibold text-heading-large text-primary" href=""
@@ -56,7 +56,7 @@
             height="7"
             viewBox="0 0 7 7"
           >
-            <use href="/icon/new.svg#new 1" />
+            <use href="public/icon/new.svg#new 1" />
           </svg>
         </a>
       </div>
@@ -74,7 +74,7 @@
           />
           <button type="button">
             <svg role="button" width="36" height="36" viewBox="0 0 36 36">
-              <use href="/icon/_sprite.svg#Search" />
+              <use href="public/icon/_sprite.svg#Search" />
             </svg>
           </button>
         </div>
@@ -86,14 +86,14 @@
           <li>
             <button>
               <svg role="button" width="36" height="36" viewBox="0 0 36 36">
-                <use href="/icon/_sprite.svg#Location" />
+                <use href="public/icon/_sprite.svg#Location" />
               </svg>
             </button>
           </li>
           <li>
             <button>
               <svg role="button" width="36" height="36" viewBox="0 0 36 36">
-                <use href="/icon/_sprite.svg#Heart" />
+                <use href="public/icon/_sprite.svg#Heart" />
               </svg>
             </button>
           </li>
@@ -122,7 +122,7 @@
               class="flex items-center h-full gap-3 hover:text-primary"
             >
               <svg role="button" width="16" height="14" viewBox="0 0 16 14">
-                <use href="/icon/_sprite.svg#Hamburger" />
+                <use href="public/icon/_sprite.svg#Hamburger" />
               </svg>
               카테고리
             </button>
@@ -134,7 +134,7 @@
                 <a href="#" class="flex gap-2"
                   ><img
                     class="w-6 h-6"
-                    src="/menu/Gift.png"
+                    src="public/menu/Gift.png"
                     alt="선물하기"
                     aria-hidden="true"
                   />선물하기</a
@@ -144,7 +144,7 @@
                 <a href="#" class="flex gap-2"
                   ><img
                     class="w-6 h-6"
-                    src="/menu/Vegetable.png"
+                    src="public/menu/Vegetable.png"
                     alt="채소"
                     aria-hidden="true"
                   />채소</a
@@ -154,7 +154,7 @@
                 <a href="#" class="flex gap-2"
                   ><img
                     class="w-6 h-6"
-                    src="/menu/Fruit.png"
+                    src="public/menu/Fruit.png"
                     alt="과일 · 견과 · 쌀"
                     aria-hidden="true"
                   />과일 · 견과 · 쌀</a
@@ -174,7 +174,7 @@
                 <a href="#" class="flex gap-2"
                   ><img
                     class="w-6 h-6"
-                    src="/menu/Meet.png"
+                    src="public/menu/Meet.png"
                     alt="정육 · 계란"
                     aria-hidden="true"
                   />정육 · 계란</a
@@ -184,7 +184,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Cook.png"
+                    src="public/menu/Cook.png"
                     alt="국 · 반찬 · 메인요리"
                     aria-hidden="true"
                   />국 · 반찬 · 메인요리
@@ -194,7 +194,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Salad.png"
+                    src="public/menu/Salad.png"
                     alt="샐러드 · 간편식"
                     aria-hidden="true"
                   />샐러드 · 간편식
@@ -204,7 +204,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Oil.png"
+                    src="public/menu/Oil.png"
                     alt="면 · 양념 · 오일"
                     aria-hidden="true"
                   />면 · 양념 · 오일
@@ -214,7 +214,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Coffee.png"
+                    src="public/menu/Coffee.png"
                     alt="생수 · 음료 · 우유 · 커피"
                     aria-hidden="true"
                   />생수 · 음료 · 우유 · 커피
@@ -224,7 +224,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Snack.png"
+                    src="public/menu/Snack.png"
                     alt="간식 · 과자 · 떡"
                     aria-hidden="true"
                   />간식 · 과자 · 떡
@@ -234,7 +234,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Bread.png"
+                    src="public/menu/Bread.png"
                     alt="베이커리 · 치즈 · 델리"
                     aria-hidden="true"
                   />베이커리 · 치즈 · 델리
@@ -244,7 +244,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Health.png"
+                    src="public/menu/Health.png"
                     alt="건강식품"
                     aria-hidden="true"
                   />건강식품
@@ -254,7 +254,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Wine.png"
+                    src="public/menu/Wine.png"
                     alt="와인"
                     aria-hidden="true"
                   />와인
@@ -264,7 +264,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Traditional_Liquor.png"
+                    src="public/menu/Traditional_Liquor.png"
                     alt="전통주"
                     aria-hidden="true"
                   />전통주
@@ -274,7 +274,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Detergent.png"
+                    src="public/menu/Detergent.png"
                     alt="생활용품 · 리빙 · 캠핑"
                     aria-hidden="true"
                   />생활용품 · 리빙 · 캠핑
@@ -284,7 +284,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Cosmetics.png"
+                    src="public/menu/Cosmetics.png"
                     alt="스킨케어 · 메이크업 "
                     aria-hidden="true"
                   />스킨케어 · 메이크업
@@ -294,7 +294,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/shampoo.png"
+                    src="public/menu/shampoo.png"
                     alt="헤어 · 바디 · 구강 "
                     aria-hidden="true"
                   />헤어 · 바디 · 구강
@@ -304,7 +304,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Food.png"
+                    src="public/menu/Food.png"
                     alt="주방용품"
                     aria-hidden="true"
                   />주방용품
@@ -314,7 +314,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/HomeAppliances.png"
+                    src="public/menu/HomeAppliances.png"
                     alt="가전제품"
                     aria-hidden="true"
                   />가전제품
@@ -324,7 +324,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Dog.png"
+                    src="public/menu/Dog.png"
                     alt="반려동물"
                     aria-hidden="true"
                   />반려동물
@@ -334,7 +334,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Baby.png"
+                    src="public/menu/Baby.png"
                     alt="베이비 · 키즈 · 완구"
                     aria-hidden="true"
                   />베이비 · 키즈 · 완구
@@ -344,7 +344,7 @@
                 <a href="#" class="flex gap-2">
                   <img
                     class="w-6 h-6"
-                    src="/menu/Travel.png"
+                    src="public/menu/Travel.png"
                     alt="여행 · 티켓 "
                     aria-hidden="true"
                   />여행 · 티켓
