[🎨Modify]: header에 cart 경로 추가

--- a/public/components/header/header.html
+++ b/public/components/header/header.html
@@ -98,11 +98,11 @@
             </button>
           </li>
           <li>
-            <button>
+            <a href="/src/pages/cart/">
               <svg role="button" width="36" height="36" viewBox="0 0 36 36">
                 <use href="/icon/_sprite.svg#Cart_header" />
               </svg>
-            </button>
+            </a>
           </li>
         </ul>
       </div>
