[📑Docs]: 파일 이름 수정

--- a/public/components/addCart/addCart.html
+++ b/public/components/addCart/addCart.html
@@ -29,7 +29,7 @@
     <!-- <meta property="og:url" content="웹페이지 URL" /> -->
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
     <link
-      rel="preload"
+      rel="stylesheet"
       as="style"
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
