--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -10,5 +10,6 @@
 @import './common.css';
 @import './header.css';
 @import './footer.css';
-@import './detailModal.css';
 @import './detail.css';
+@import './register.css';
+@import './detailModal.css';
