[🎨Modify]: 이용약관 마크업 구조 변경 및 레이아웃 수정

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,5 +1,9 @@
 .flex_center {
-  @apply flex justify-center items-center;
+  @apply flex items-center justify-center;
+}
+
+.flex_between {
+  @apply flex items-center justify-between;
 }
 
 .w1050 {
