--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -1,7 +1,7 @@
 
 <!-- addCart component -->   
 <!-- <div id="addCart">    -->
-  <div id="addCartModal" class="fixed top-0 left-0 w-screen h-screen ">
+  <div id="addCartModal" class="fixed top-0 left-0 w-screen h-screen modal_index ">
     <div class="add_cart_back"></div>
     <div class="absolute top-0 left-0 flex_h_center absolute_center">
       <dialog class="w-356pxr box-content bg-white p-30pxr rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col">
