[✨Feat]: 회원가입 아이디 및 비밀번호 유효성 체크

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -39,7 +39,7 @@
             <img src="/jandi_logo.svg" alt="잔디마켓" />
           </a>
         </h2>
-        <a class="font-semibold text-heading-large text-primary" href=""
+        <a class="font-semibold text-heading-large text-primary" href="/"
           >잔디마켓</a
         >
         <div
