디테일,메인,회원가입,addCart .... (#131)
* [✨Feat]: 데이터 1차 바인딩

- fetch를 이용한 데이터 가져오기
  (코드 수정이 들어갈 예정입니다)

* [✨Feat] : swiper 기능 시안+@ 구현
[🎨Modify] : main HTML UI 사이드바 제외하고 완성

* [🎨Modify]: 검색바 label 태그 추가, button aria-label

* [🎨Modify]: vite.config에 header,footer 경로 추가

* [✨Feat]: register 마크업 완성(일부 수정 필요)

* [🎨Modify]: 로그인 페이지 마크업 완성

* [🔥Remove]: public > components 폴더 삭제

* [🎨Modify]: 이미지 경로에 /public 삭제

* [🎨Modify]: 이용약관 마크업 구조 변경 및 레이아웃 수정

* [✨Feat]: 리스트 데이터 바인딩 (#116)

- 이 상품 어때요? , 놓치면 후회할 가격 리스트 데이터 바인딩
  (수정 필요)

* [✨Feat]: addCart.js 모달 open, close 기능 구현 (#117)

addCart.js
- 모달 open, close 기능 구현

* [🎨Modify]: 회원가입 마크업 완성 (#118)

* [✨Feat]: 수량 체크 시 총 금액 변경 (#124)

* [✨Feat]: 수량 컨트롤

- 상품의 수량을 선택할 수 있는 기능 구현

* [✨Feat]: 수량 1이하 비활성화

수량이 1 초과면 감소 버튼이 활성화버튼으로 바뀌고,
수량이 1 이하면 감소 버튼이 비활성화

* [✨Feat]: 수량 체크 시 총 금액 변경

수량에 따라 총 금액이 변경되는 로직 구현

* [✨Feat]: localStorage에 하트 상태 표시 (#125)

* [✨Feat]: localStorage에 하트 상태 표시

- 상태에 따라 찜하기가 true, false됩니다.
- 로그인, 비로그인과 관계없이 local에 저장되는 상태
  - 추후에 로그인, 비로그인도 나눌 예정입니다.

* [🎨Modify]: localStorage에 하트 상태 관련 코드수정  (#126)

* [✨Feat]: 수량 컨트롤

- 상품의 수량을 선택할 수 있는 기능 구현

* [✨Feat]: 수량 1이하 비활성화

수량이 1 초과면 감소 버튼이 활성화버튼으로 바뀌고,
수량이 1 이하면 감소 버튼이 비활성화

* [✨Feat]: 수량 체크 시 총 금액 변경

수량에 따라 총 금액이 변경되는 로직 구현

* [✨Feat]: localStorage에 하트 상태 표시

- 상태에 따라 찜하기가 true, false됩니다.
- 로그인, 비로그인과 관계없이 local에 저장되는 상태
  - 추후에 로그인, 비로그인도 나눌 예정입니다.

* [🎨Modify]: localStorage에 하트 상태 관련 코드수정

- 각 상품 별로 wish 담기

 #40

* [📝Comment]: 주석 제거

- 충돌 수정을 위해서 주석 제거 후 다시 보냅니다.

* [🐛Fix]: 수량 에러 수정

- -버튼 눌렀을 때 2부터 비활성화 되는 거 수정했습니다.

* cart 페이지 체크박스 구현 (#128)

* [🎨Modify]: cart.hrml 상품 리스트 image, product_name a태그 링크 수정

cart.html
- 상품 리스트 image, product_name 클릭 시 detail 페이지로 이동

* [🎨Modify]: cart.html h4 마크업 위치 변경

cart.html
- h4 마크업 위치 변경

* [✨Feat]: cart.js cart list 전체선택 기능 구현

cart.js
- cart list 전체선택 기능 구현

* [🔥Remove]: juhyuny 로컬feature/cart에 남은 cart.html 삭제(index.

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -10,5 +10,9 @@
 @import './common.css';
 @import './header.css';
 @import './footer.css';
+@import './detail.css';
+@import './register.css';
 @import './detailModal.css';
 @import './detail.css';
+@import './login.css';
+@import './addCart.css';
