[🎨Modify]: addCart.js 증감 버튼 적용, cart.js 토글버튼 이미지기능
addCart.js
- 증감 버튼 적용
cart.js
- 토글버튼 이미지 변경기능

--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -20,7 +20,7 @@
               <span class="after_discount text-[14px]">4,980원</span>
               <span class="before_discount line-through text-[12px] text-gray-200 font-normal ml-1">5,600원</span>
             </div>
-            <div class="box-content flex items-center justify-between bg-white border border-gray-200 border-solid option_count w-84pxr h-30pxr">
+            <div class="option_count">
               <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
                 <span class="sr-only">수량 감소</span>
               </button>
