[🐛Fix]: 헤더의 카테고리 > 메뉴리스트에 z-index 부여

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -127,7 +127,7 @@
           카테고리
         </button>
         <ul
-          class="absolute bg-white border list_hidden w-247pxr"
+          class="absolute bg-white border z_index list_hidden w-247pxr"
           id="menu_list"
         ></ul>
       </div>
