[✨Feat] 회원가입 유효성 체크 및 입력 값 변수에 저장
- 회원가입 입력 값 구조분해할당
- 이메일 및 휴대폰 데이터베이스 유저정보와 중복 검사
- 주소 찾기
- 체크박스 구현

--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -37,3 +37,9 @@
 .error {
   @apply mt-1 overflow-hidden text-xs font-medium text-info-error;
 }
+
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
