--- a/src/styles/detailModal.css
+++ b/src/styles/detailModal.css
@@ -1,3 +1,3 @@
 .modalButton {
-  @apply border flex justify-center items-center rounded text-label-medium font-semibold w-186pxr h-54pxr;
+  @apply flex items-center justify-center font-semibold border rounded text-label-medium w-186pxr h-54pxr;
 }
