[✨Feat]: 후기 & 문의글 DB로 보내기
- 후기글과 문의글 DB로 보내기
  (코드는 리팩토링 예정)

--- a/src/components/detailModal/detailModal.html
+++ b/src/components/detailModal/detailModal.html
@@ -175,8 +175,9 @@
       </button>
       <button
         type="submit"
+        disabled
         value="등록"
-        class="text-white bg-gray-100 modalButton"
+        class="text-white modalButton"
       >
         등록
       </button>
