[🐛Fix]: 모달창을 띄우면 여백이 생기는 문제 해결
- max width 와 max height때문에 생긴 문제였다.

--- a/src/components/detailModal/detailModal.html
+++ b/src/components/detailModal/detailModal.html
@@ -1,5 +1,5 @@
 <dialog
-  class="modal mt-0 bg-[rgba(0,0,0,0.3)] inset-0 w-screen h-screen fixed flex items-center justify-center z-50 modal_hidden"
+  class="modal m-0 max-w-full max-h-full bg-[rgba(0,0,0,0.3)] inset-0 w-screen h-screen fixed flex items-center justify-center z-[100] modal_hidden"
 >
   <form
     method="dialog"
