[✨Feat]: cart.js 장바구니 리스트 데이터 바인딩(수정중)
cart.js
- 장바구니 리스트 데이터 바인딩
cart/index.html
- 해당 리스트 카테고리에 내용이 없을 경우 안보이는 기능

--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -23,7 +23,7 @@
 }
 
 .option_count {
-  @apply box-content flex items-center justify-between bg-white border border-gray-200 border-solid w-84pxr h-30pxr;
+  @apply box-content flex items-center justify-between bg-white border border-gray-200 border-solid w-84pxr h-30pxr rounded-[3px];
 }
 
 .price_delete {
