[📑Docs]: modal 컴포넌트 생성

--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -2,9 +2,7 @@
   class="fixed top-0 left-0 z-10 w-full h-full mx-auto my-0 overflow-auto flex_center bg-black-40"
 >
   <div class="flex-col m-auto rounded-lg w-360pxr bg-modal flex_center">
-    <div class="px-8 py-10 font-medium text-center">
-      아이디,비밀번호를 확인하세요.
-    </div>
+    <div id="message" class="px-8 py-10 font-medium text-center"></div>
     <button
       type="button"
       id="close_modal"
