[Feature/register#119] 회원가입 구현, 헤더 스크롤바 구현 (#154)
* [✨Feat]: 회원가입 아이디 및 비밀번호 유효성 체크

* [✨Feat]: 회원가입 입력 값 유효성 검사 함수

- 재사용 가능한 함수로 변경

* [✨Feat]: 헤더 스크롤 기능 구현

* [🔧Add] 개별 폴더에 저장한거 header 컴포넌트 폴더에 저장

* [🐛Fix]: 헤더의 카테고리 > 메뉴리스트에 z-index 부여

* [✨Feat] 회원가입 유효성 체크 및 입력 값 변수에 저장

- 회원가입 입력 값 구조분해할당
- 이메일 및 휴대폰 데이터베이스 유저정보와 중복 검사
- 주소 찾기
- 체크박스 구현

* [✨Feat]: 회원가입 페이지 데이터 수송신, 이벤트 핸들러

- fetch로 GET,POST 데이터 가져와 중복 체크
- 입력 값 객체로 값 POST
- 유효성 검사와 데이터 할당하는 재사용 함수 사용

* [🔧Add]: 로그인 실패 시 띄울 모달창 컴포넌트 파일 생성

* [✨Feat]: 데이터 async await으로 불러오기

- 데이터를 받아와 입력 값과 비교 전 데이터가 로드 안됐을 때
- 데이터 로드 중임을 알림창으로 띄움
- 로그인 실패 시 모달창 띄우는 기능 구현

* [✨Feat]: 회원가입 기능 구현

- remove,add => toggle로 변경
- 필수 입력 사항이 다 채워졌는지 체크
- 회원가입 성공시 , 안내 창 과 로그인 페이지로 이동
- 중복 확인 검사 버튼 기능 구현

* [📑Docs]: modal 컴포넌트 생성

--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -1,9 +1,9 @@
 .inline_flex {
-  @apply inline-flex items-center w-full px-5 py-5;
+  @apply inline-flex w-full px-5 py-5;
 }
 
 .input_style {
-  @apply w-333pxr h-11 px-4 py-0.5 border rounded border-gray-300  leading-6 text-gray-400 outline-none;
+  @apply w-333pxr h-11 px-4 py-0.5 border rounded border-gray-300  leading-6 outline-none;
 }
 
 .button_style {
@@ -32,4 +32,14 @@
 
 .label_check {
   @apply pl-2 relative before:absolute before:left-[-24px] before:content-[''] before:inline-block before:w-6 before:h-6 before:bg-[url(/input/checkBox.svg)] peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)];
+}
+
+.error {
+  @apply mt-1 overflow-hidden text-xs font-medium text-info-error;
+}
+
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
