[💄Design]: header z-index 값 변경

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,6 +1,6 @@
 <div class="w-full bg-white shadow-md z_index">
   <!-- Top Banner -->
-  <div class="flex hidden top_banner bg-primary">
+  <div class="flex top_banner bg-primary">
     <div class="text-white w-[1050px] mx-auto flex_center py-1">
       <span class="font-light w-[63rem] text-center"
         >지금 가입하고 인기상품 <strong class="font-medium">100원</strong>에
