--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -18,28 +18,18 @@
 
   <div class="header_box w-[1050px] mx-auto mt-3">
     <!-- Header-Top -->
-    <ul class="relative flex justify-end">
-      <li class="text-primary">
-        <a class="text-14pxr" href="/src/pages/register/">회원가입</a>
-      </li>
-      <li class="line">
-        <a class="text-14pxr" href="/src/pages/login/">로그인</a>
-      </li>
-      <li class="line">
-        <a class="text-14pxr cs" href="#">고객센터</a>
-      </li>
-    </ul>
+    <ul id="sign" class="relative flex justify-end leading-8"></ul>
 
     <!-- Header-Middle -->
-    <div class="flex items-center self-stretch justify-between mt-7">
+    <div class="flex items-center self-stretch justify-between my-7">
       <!-- Middle-left -->
       <div class="flex items-center gap-3">
-        <h2 class="w-82pxr h-42pxr">
+        <h1 class="w-82pxr h-42pxr">
           <a href="/">
             <img src="/jandi_logo.svg" alt="잔디마켓" />
           </a>
-        </h2>
-        <a class="font-semibold text-heading-large text-primary" href=""
+        </h1>
+        <a class="font-semibold text-heading-large text-primary" href="/"
           >잔디마켓</a
         >
         <div
@@ -65,6 +55,7 @@
 
       <div class="relative">
         <div
+          id="searchBar"
           class="absolute flex items-center justify-between px-5 py-3 border rounded-md top-[-30px] right-[-100px] w-400pxr border-primary"
         >
           <label for="search" class="sr-only">검색어를 입력해주세요.</label>
@@ -74,7 +65,7 @@
             type="text"
             placeholder="검색어를 입력해주세요"
           />
-          <button type="button" aria-label="검색">
+          <button type="button" class="absolute right-4" aria-label="검색">
             <svg role="img" width="36" height="36" viewBox="0 0 36 36">
               <use href="/icon/_sprite.svg#Search" />
             </svg>
@@ -84,7 +75,10 @@
 
       <!-- Middle-Right -->
       <div class="relative">
-        <ul class="absolute right-[-5px] top-[-15px] flex items-center gap-5">
+        <ul
+          id="icons"
+          class="absolute right-[-5px] top-[-15px] flex items-center gap-5"
+        >
           <li>
             <button>
               <svg role="button" width="36" height="36" viewBox="0 0 36 36">
@@ -100,7 +94,7 @@
             </button>
           </li>
           <li>
-            <button>
+            <button class="cart">
               <svg role="button" width="36" height="36" viewBox="0 0 36 36">
                 <use href="/icon/_sprite.svg#Cart_header" />
               </svg>
@@ -109,276 +103,59 @@
         </ul>
       </div>
     </div>
+  </div>
+  <!-- Header-Bottom -->
 
-    <!-- Header-Bottom -->
-    <div class="">
-      <div
-        class="relative flex items-center justify-center w-full pt-6 z_index"
-      >
-        <div class="w-[1050px] flex justify-between items-center h-56pxr">
-          <!-- Bottom-left -->
-          <div id="menu_list_box" class="h-full">
-            <button
-              type="button"
-              id="menu_button"
-              class="flex items-center h-full gap-3 hover:text-primary"
-            >
-              <svg role="button" width="16" height="14" viewBox="0 0 16 14">
-                <use href="/icon/_sprite.svg#Hamburger" />
-              </svg>
-              카테고리
-            </button>
-            <ul
-              class="absolute bg-white border menu_hidden top-20 w-247pxr"
-              id="menu_list"
-            >
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2"
-                  ><img
-                    class="w-6 h-6"
-                    src="/menu/Gift.png"
-                    alt="선물하기"
-                    aria-hidden="true"
-                  />선물하기</a
-                >
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2"
-                  ><img
-                    class="w-6 h-6"
-                    src="/menu/Vegetable.png"
-                    alt="채소"
-                    aria-hidden="true"
-                  />채소</a
-                >
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2"
-                  ><img
-                    class="w-6 h-6"
-                    src="/menu/Fruit.png"
-                    alt="과일 · 견과 · 쌀"
-                    aria-hidden="true"
-                  />과일 · 견과 · 쌀</a
-                >
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/SeaFood.png"
-                    alt="수산 · 해산 · 건어물"
-                    aria-hidden="true"
-                  />수산 · 해산 · 건어물
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2"
-                  ><img
-                    class="w-6 h-6"
-                    src="/menu/Meet.png"
-                    alt="정육 · 계란"
-                    aria-hidden="true"
-                  />정육 · 계란</a
-                >
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Cook.png"
-                    alt="국 · 반찬 · 메인요리"
-                    aria-hidden="true"
-                  />국 · 반찬 · 메인요리
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Salad.png"
-                    alt="샐러드 · 간편식"
-                    aria-hidden="true"
-                  />샐러드 · 간편식
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Oil.png"
-                    alt="면 · 양념 · 오일"
-                    aria-hidden="true"
-                  />면 · 양념 · 오일
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Coffee.png"
-                    alt="생수 · 음료 · 우유 · 커피"
-                    aria-hidden="true"
-                  />생수 · 음료 · 우유 · 커피
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Snack.png"
-                    alt="간식 · 과자 · 떡"
-                    aria-hidden="true"
-                  />간식 · 과자 · 떡
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Bread.png"
-                    alt="베이커리 · 치즈 · 델리"
-                    aria-hidden="true"
-                  />베이커리 · 치즈 · 델리
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Health.png"
-                    alt="건강식품"
-                    aria-hidden="true"
-                  />건강식품
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Wine.png"
-                    alt="와인"
-                    aria-hidden="true"
-                  />와인
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Traditional_Liquor.png"
-                    alt="전통주"
-                    aria-hidden="true"
-                  />전통주
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Detergent.png"
-                    alt="생활용품 · 리빙 · 캠핑"
-                    aria-hidden="true"
-                  />생활용품 · 리빙 · 캠핑
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Cosmetics.png"
-                    alt="스킨케어 · 메이크업 "
-                    aria-hidden="true"
-                  />스킨케어 · 메이크업
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/shampoo.png"
-                    alt="헤어 · 바디 · 구강 "
-                    aria-hidden="true"
-                  />헤어 · 바디 · 구강
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Food.png"
-                    alt="주방용품"
-                    aria-hidden="true"
-                  />주방용품
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/HomeAppliances.png"
-                    alt="가전제품"
-                    aria-hidden="true"
-                  />가전제품
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Dog.png"
-                    alt="반려동물"
-                    aria-hidden="true"
-                  />반려동물
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Baby.png"
-                    alt="베이비 · 키즈 · 완구"
-                    aria-hidden="true"
-                  />베이비 · 키즈 · 완구
-                </a>
-              </li>
-              <li class="focus_menu">
-                <a href="#" class="flex gap-2">
-                  <img
-                    class="w-6 h-6"
-                    src="/menu/Travel.png"
-                    alt="여행 · 티켓 "
-                    aria-hidden="true"
-                  />여행 · 티켓
-                </a>
-              </li>
-            </ul>
-          </div>
-          <!-- Bottom-center -->
-          <ul class="flex ml-24">
-            <li class="product_nav">
-              <a href="/src/pages/productList/">신상품</a>
-            </li>
-            <li class="product_nav">
-              <a href="/src/pages/productList/">베스트</a>
-            </li>
-            <li class="product_nav">
-              <a href="/src/pages/productList/">알뜰쇼핑</a>
-            </li>
-            <li class="product_nav">
-              <a href="/src/pages/productList/">특가/혜택</a>
-            </li>
-          </ul>
-          <!-- Bottom-right -->
-          <a
-            class="px-2 py-1 text-sm font-normal text-gray-500 border border-gray-300 rounded-xl"
-            href="#"
-          >
-            <span class="text-primary">샛별·낮</span>
-            배송안내
-          </a>
-        </div>
+  <div
+    id="header_scroll"
+    class="z-50 flex items-center justify-center w-full scroll"
+  >
+    <div
+      id="categoryBox"
+      class="flex items-center justify-between h-56pxr w-[1050px]"
+    >
+      <!-- Bottom-left -->
+      <div id="menu_list_box" class="h-full">
+        <button
+          type="button"
+          id="menu_button"
+          class="flex items-center h-full gap-3 hover:text-primary"
+        >
+          <svg role="button" width="16" height="14" viewBox="0 0 16 14">
+            <use href="/icon/_sprite.svg#Hamburger" />
+          </svg>
+          카테고리
+        </button>
+        <ul
+          class="absolute bg-white border z_index list_hidden w-247pxr"
+          id="menu_list"
+        ></ul>
       </div>
+      <!-- Bottom-center -->
+      <ul class="flex ml-20">
+        <li class="product_nav nav_li">
+          <a href="/src/pages/productList/">신상품</a>
+        </li>
+        <li class="product_nav nav_li">
+          <a href="/src/pages/productList/">베스트</a>
+        </li>
+        <li class="product_nav nav_li">
+          <a href="/src/pages/productList/">알뜰쇼핑</a>
+        </li>
+        <li class="product_nav nav_li">
+          <a href="/src/pages/productList/">특가/혜택</a>
+        </li>
+      </ul>
+      <!-- Bottom-right -->
+
+      <a
+        id="delivery"
+        class="px-2 py-1 text-sm font-normal text-gray-500 border border-gray-300 rounded-xl"
+        href="#"
+      >
+        <span class="text-primary">샛별·낮</span>
+        배송안내
+      </a>
     </div>
   </div>
 </div>
