--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -1,57 +1,92 @@
-
-<!-- addCart component -->   
+<!-- addCart component -->
 <!-- <div id="addCart">    -->
-  <div id="addCartModal" class="fixed top-0 left-0 w-screen h-screen modal_index ">
-    <div class="add_cart_back"></div>
-    <div class="absolute top-0 left-0 flex_h_center absolute_center">
-      <dialog class="w-356pxr box-content bg-white p-30pxr rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col">
-        <div class="flex items-center pb-3 cart_product_thumb text-15pxr">
-          <span class="block w-50pxr h-50pxr mr-3.5" style="background-image: url(https://via.placeholder.com/50x50);"></span>
+<div id="addCartModal" class="fixed top-0 left-0 w-screen h-screen modal_index">
+  <div class="add_cart_back"></div>
+  <div class="absolute top-0 left-0 flex_h_center absolute_center">
+    <dialog
+      class="w-356pxr box-content bg-white p-30pxr rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col"
+    >
+      <div class="flex items-center pb-3 cart_product_thumb text-15pxr">
+        <span
+          class="block w-50pxr h-50pxr mr-3.5"
+          style="background-image: url(https://via.placeholder.com/50x50)"
+        ></span>
+        <span class="product_brand">[풀무원]</span>
+        <span class="product_name">탱탱쫄면 (4개입)</span>
+      </div>
+      <div class="py-3 add_option border-t-[1px] border-t-gray-50">
+        <div class="pb-1 font-normal option_name text-content text-14pxr">
           <span class="product_brand">[풀무원]</span>
           <span class="product_name">탱탱쫄면 (4개입)</span>
         </div>
-        <div class="py-3 add_option border-t-[1px] border-t-gray-50">
-          <div class="pb-1 font-normal option_name text-content text-14pxr">
-            <span class="product_brand">[풀무원]</span>
-            <span class="product_name">탱탱쫄면 (4개입)</span>
+        <div class="flex items-center justify-between option_price">
+          <div class="font-bold product_price">
+            <span class="after_discount text-[14px]">4,980원</span>
+            <span
+              class="before_discount line-through text-[12px] text-gray-200 font-normal ml-1"
+              >5,600원</span
+            >
           </div>
-          <div class="flex items-center justify-between option_price">
-            <div class="font-bold product_price">
-              <span class="after_discount text-[14px]">4,980원</span>
-              <span class="before_discount line-through text-[12px] text-gray-200 font-normal ml-1">5,600원</span>
-            </div>
-            <div class="option_count">
-              <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
-                <span class="sr-only">수량 감소</span>
-              </button>
-              <span class="item_count">1</span>
-              <button type="button"  class="plus w-30pxr h-30pxr" style="background-image: url(/input/plus.svg);">
-                <span class="sr-only">수량 증가</span>
-              </button>
-            </div>
-          </div>
-        </div>
-    
-        <div class="flex flex-col items-end gap-1 pb-5 option_amount pt-14pxr border-t-[1px] border-t-gray-50">
-          <div class="flex items-end justify-between w-full">
-            <span>합계</span>
-            <div class="font-bold option_sum text-heading-large">
-              <span>4,980원</span>
-            </div>
-          </div>
-          <div class="flex reward text-label-small">
-            <span class="bg-accent-yellow px-2 text-white rounded-[1px]">적립</span>
-            <span class="ml-2" >구매 시 5원 적립</span>
+          <div class="option_count">
+            <button
+              type="button"
+              class="minus w-30pxr h-30pxr"
+              style="background-image: url(/input/minus-disabled.svg)"
+            >
+              <span class="sr-only">수량 감소</span>
+            </button>
+            <span class="item_count">1</span>
+            <button
+              type="button"
+              class="plus w-30pxr h-30pxr"
+              style="background-image: url(/input/plus.svg)"
+            >
+              <span class="sr-only">수량 증가</span>
+            </button>
           </div>
         </div>
-    
-    
-        <ul class="flex gap-2 font-semibold add_cart_menu">
-          <li class="w-full"><button id="closeModal" type="button" value="cancel" class="w-full border border-gray-400 rounded h-54pxr text-content">취소</button></li>
-          <li class="w-full"><button type="button" id="addBtn" class="w-full text-white rounded h-54pxr bg-primary">장바구니 담기</button></li>
-        </ul>
-      </dialog>
-    </div>
+      </div>
+
+      <div
+        class="flex flex-col items-end gap-1 pb-5 option_amount pt-14pxr border-t-[1px] border-t-gray-50"
+      >
+        <div class="flex items-end justify-between w-full">
+          <span>합계</span>
+          <div class="font-bold option_sum text-heading-large">
+            <span>4,980원</span>
+          </div>
+        </div>
+        <div class="flex reward text-label-small">
+          <span class="bg-accent-yellow px-2 text-white rounded-[1px]"
+            >적립</span
+          >
+          <span class="ml-2">구매 시 5원 적립</span>
+        </div>
+      </div>
+
+      <ul class="flex gap-2 font-semibold add_cart_menu">
+        <li class="w-full">
+          <button
+            id="closeModal"
+            type="button"
+            value="cancel"
+            class="w-full border border-gray-400 rounded h-54pxr text-content"
+          >
+            취소
+          </button>
+        </li>
+        <li class="w-full">
+          <button
+            type="button"
+            id="addBtn"
+            class="w-full text-white rounded h-54pxr bg-primary"
+          >
+            장바구니 담기
+          </button>
+        </li>
+      </ul>
+    </dialog>
   </div>
+</div>
 <!-- </div> -->
 <!-- addCart component -->
