[💄Design]: header > bubble 컴포넌트 추가
- header 장바구니 아이콘에 bubble 컴포넌트 추가

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -93,12 +93,13 @@
               </svg>
             </button>
           </li>
-          <li>
+          <li class="relative">
             <button class="cart">
               <svg role="button" width="36" height="36" viewBox="0 0 36 36">
                 <use href="/icon/_sprite.svg#Cart_header" />
               </svg>
             </button>
+            <div id="addBubble" class="bubble"></div>
           </li>
         </ul>
       </div>
