--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -1,5 +1,5 @@
 <dialog
-  class="fixed top-0 left-0 z-10 w-full h-full mx-auto my-0 overflow-auto flex_center bg-black-40"
+  class="fixed top-0 left-0 w-full h-full mx-auto my-0 overflow-auto z-[100] flex_center bg-black-40"
 >
   <div class="flex-col m-auto rounded-lg w-360pxr bg-modal flex_center">
     <div id="message" class="px-8 py-10 font-medium text-center"></div>
