[✨Feat]: bubble 구현
- 상품 구매 시 bubble창 띄우기

--- a/src/components/bubble/index.html
+++ b/src/components/bubble/index.html
@@ -12,18 +12,15 @@
     <path d="M10 1L18.6603 13.75H1.33975L10 1Z" fill="white" />
     <path d="M1 13.5L10 1L18.5 13.5" stroke="#C4C4C4" />
   </svg>
-  <img
-    src="https://via.placeholder.com/46x60"
-    alt="추가된 상품의 이름을 넣어주세요"
-  />
+  <img src="" alt="" class="bubble_image" width="46" height="60" />
   <div
     class="flex flex-col gap-2 pl-5 font-normal w-258pxr text-content text-label-small"
   >
-    <span class="overflow-hidden text-gray-300 text-ellipsis whitespace-nowrap"
-      >[풀무원] 탱탱쫄면 (4개입)</span
-    >
+    <span
+      class="overflow-hidden text-gray-300 text-ellipsis whitespace-nowrap bubble_product_name"
+    ></span>
     <div>
-      <p>장바구니에 상품을 담았습니다.</p>
+      <p id="bubble_message"></p>
     </div>
   </div>
 </div>
