--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -99,7 +99,7 @@
                 <use href="/icon/_sprite.svg#Cart_header" />
               </svg>
             </button>
-            <div id="addBubble" class="bubble"></div>
+            <div id="addBubble" class="bubble hidden"></div>
           </li>
         </ul>
       </div>
