--- a/src/components/bubble/index.html
+++ b/src/components/bubble/index.html
@@ -12,15 +12,18 @@
     <path d="M10 1L18.6603 13.75H1.33975L10 1Z" fill="white" />
     <path d="M1 13.5L10 1L18.5 13.5" stroke="#C4C4C4" />
   </svg>
-  <img src="" alt="" class="bubble_image" width="46" height="60" />
+  <img
+    src="https://via.placeholder.com/46x60"
+    alt="추가된 상품의 이름을 넣어주세요"
+  />
   <div
     class="flex flex-col gap-2 pl-5 font-normal w-258pxr text-content text-label-small"
   >
-    <span
-      class="overflow-hidden text-gray-300 text-ellipsis whitespace-nowrap bubble_product_name"
-    ></span>
+    <span class="overflow-hidden text-gray-300 text-ellipsis whitespace-nowrap"
+      >[풀무원] 탱탱쫄면 (4개입)</span
+    >
     <div>
-      <p id="bubble_message"></p>
+      <p>장바구니에 상품을 담았습니다.</p>
     </div>
   </div>
 </div>
