--- a/src/components/bubble/index.html
+++ b/src/components/bubble/index.html
@@ -14,16 +14,19 @@
   </svg>
   <img
     src="https://via.placeholder.com/46x60"
-    alt="추가된 상품의 이름을 넣어주세요"
+    alt=""
+    class="bubble_image"
+    width="46"
+    height="60"
   />
   <div
     class="flex flex-col gap-2 pl-5 font-normal w-258pxr text-content text-label-small"
   >
-    <span class="overflow-hidden text-gray-300 text-ellipsis whitespace-nowrap"
-      >[풀무원] 탱탱쫄면 (4개입)</span
-    >
+    <span
+      class="overflow-hidden text-gray-300 text-ellipsis whitespace-nowrap bubble_product_name"
+    ></span>
     <div>
-      <p>장바구니에 상품을 담았습니다.</p>
+      <p id="bubble_message"></p>
     </div>
   </div>
 </div>
