[✨Feat]: addCart modal UI 구현

--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -1,6 +1,9 @@
 <!-- addCart component -->
 <!-- <div id="addCart">    -->
-<div id="addCartModal" class="fixed top-0 left-0 w-screen h-screen modal_index">
+<div
+  id="addCartModal"
+  class="fixed top-0 left-0 w-screen h-screen modal_hidden modal_index"
+>
   <div class="add_cart_back"></div>
   <div class="absolute top-0 left-0 flex_h_center absolute_center">
     <dialog
