[detailModal] border 추가

--- a/src/components/detailModal/detailModal.html
+++ b/src/components/detailModal/detailModal.html
@@ -80,7 +80,7 @@
         type="submit"
         disabled
         value="등록"
-        class="text-white modalButton"
+        class="text-white border-gray-200 modalButton"
       >
         등록
       </button>
